# Windows-MCP

./: .mcpbignore  README.md  SECURITY.md  main.py  manifest.json  pyproject.toml  server.json
src/windows_mcp/: __main__.py  analytics.py
src/windows_mcp/desktop/: service.py
src/windows_mcp/tree/: service.py  utils.py  views.py
src/windows_mcp/uia/: controls.py  core.py  enums.py  events.py  patterns.py
src/windows_mcp/watchdog/: __init__.py  event_handlers.py  service.py
