[project]
name = "windows-mcp"
version = "0.5.8"
description = "Lightweight MCP Server for interacting with Windows Operating System."
authors = [
    { name = "Jeomon George", email = "jeogeoalukka@gmail.com" }
]
readme = "README.md"
license = { file = "LICENSE.md" }
urls = { homepage = "https://github.com/CursorTouch" }
keywords = ["windows", "mcp", "ai", "desktop","ai agent"]
requires-python = ">=3.13"
dependencies = [
    "click>=8.2.1",
    "fastmcp>=2.14.2",
    "fuzzywuzzy>=0.18.0",
    "humancursor>=1.1.5",
    "ipykernel>=6.30.0",
    "markdownify>=1.1.0",
    "pdfplumber>=0.11.7",
    "pillow>=11.2.1",
    "posthog>=7.4.0",
    "psutil>=7.0.0",
    "pyautogui>=0.9.54",
    "pygetwindow>=0.0.9",
    "python-dotenv>=1.1.0",
    "python-levenshtein>=0.27.1",
    "pywinauto>=0.6.9",
    "requests>=2.32.3",
    "tabulate>=0.9.0",
    "uuid7>=0.1.0",
]

[project.scripts]
windows-mcp = "windows_mcp.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


